# Python-Practice

./: 01-Basics_Strings_formatting.ipynb  02-List_and_dict.ipynb  03-List_Comprehension.ipynb  04-Sets.ipynb  05-Tuples.ipynb  06-Loops_RandomLib.ipynb  07-Args_Kwargs.ipynb  08-Working_With_Files.ipynb  10-Map_Filter_Lambdas.ipynb  11-Functions_Homework.ipynb  12-OOPs.ipynb  14-Exception_Handling.ipynb  16-Decorators.ipynb  17-Generators_Next_Iter.ipynb  18-CollectionsModule--Counter_and_DefaultDict.ipynb  19-CollectionsModule--OrderedDict_and_NamedTuple.ipynb  20-Eval_Exec_Repr_Functions.ipynb  21-Datetime_and_PythonDebugger.ipynb  22-Timeit.ipynb  23-RegEx.ipynb  24-Python_Pickle.ipynb  25-StringIO.ipynb  26-Interact_widget.ipynb  Algos.ipynb  FindRepeatingPattern.ipynb  HackerrankRangoli.ipynb  Pandas_Practice.ipynb  Pandas_Practice_2.ipynb  Pandas_Practice_3.ipynb  TestFile.ipynb  TestNotebook.ipynb  TicTacToe.ipynb  Untitled.ipynb  async_httpx.py  cities.csv  countries.csv  df_timing_test.py  ethereumprice_org.csv  parse_datetime.py  pickled_object.txt  (+2 more)
.ipynb_checkpoints/: 01-Basics_Strings_formatting-checkpoint.ipynb  02-List_and_dict-checkpoint.ipynb  03-List_Comprehension-checkpoint.ipynb  04-Sets-checkpoint.ipynb  05-Tuples-checkpoint.ipynb  06-Loops_RandomLib-checkpoint.ipynb  07-Args_Kwargs-checkpoint.ipynb  08-Working_With_Files-checkpoint.ipynb  (+20 more)
AlembicTest/: alembic.ini  app.db  main.py  pyproject.toml
AlembicTest/alembic/: env.py
AlembicTest/alembic/versions/: 2023_08_19_1600-766bd4a070f6_create_user_table.py
AlembicTest/models/: user.py
(+5 files in other folders)
