[tool.poetry]
name = "alembictest"
version = "0.1.0"
description = ""
authors = ["Sheikh Abdul Manan <sammanan4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.20"}
alembic = "^1.11.2"
aiosqlite = "^0.19.0"
asyncmy = "^0.2.8"
asyncpg = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
